# secure-by-default-pipeline

./: .dockerignore  Dockerfile  README.md  SECURE_PIPELINE_REPORT.md  app.py  pyproject.toml  requirements.txt  secure-pipeline-report.json
.github/workflows/: checks.yml  ci.yml  dependency-review.yml  secure-release.yml
docs/: evaluation-protocol.md  threat-model.md  user-guide.md
examples/: minimal-policy.yml
examples/repos/insecure-example/: Dockerfile  README.md  requirements.txt
examples/repos/secure-example/: Dockerfile  requirements.txt
examples/repos/secure-example/.github/workflows/: dependency-review.yml  secure-release.yml
examples/repos/secure-example/docs/: threat-model.md  user-guide.md
examples/repos/secure-example/policy/: default-policy.yml
examples/repos/secure-example/scripts/: deny-example.sh
policy/: default-policy.yml  verification-rule.md
sbd_pipeline/: checks.py  cli.py  config.py  report.py  web.py
sbd_pipeline/templates/: index.html
scripts/: collect-evidence.sh  deny-example.sh  run-local-checks.sh  show-attestation-claims.sh  verify-image.sh
tests/: test_checks.py
