[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-by-default-pipeline"
version = "1.0.0"
description = "Simple secure-by-default checker and reference pipeline for signed, attested container releases."
requires-python = ">=3.11"
dependencies = [
  "Flask==3.1.3",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
]

[project.scripts]
sbd-check = "sbd_pipeline.cli:main"
sbd-dashboard = "sbd_pipeline.web:main"

[tool.setuptools.packages.find]
include = ["sbd_pipeline*"]

[tool.setuptools.package-data]
sbd_pipeline = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
